HTML structure of references page

--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -10,7 +10,8 @@
             <div class="row justify-content-around">
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
-                        <span><img src=""></span><h1>Nos clients</h1>
+                        <img src="{{ asset('images/logoH1/nos_clients.svg') }}" class="h1">
+                        <h1>Nos clients</h1>
                     </div>
                     <div class="row col-xs-6">
                         <h2>A Subtitle</h2>
@@ -28,95 +29,38 @@
         </header>
 
         <div class="row block">
-            <div class="offset-lg-2 col-xs-12 col-lg-8" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-xs-12 col-lg-6 thumbnail">
-                        <div class="caption text-center">
-                            <h1>Example headline.</h1>
-                            <h2>Subtitle</h2>
-                        </div>
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid img-responsive">
-                        <div class="row justify-content-around display-large">
-                            <a>
-                                <button>Button</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-lg-6 thumbnail">
-                        <div class="decale">
-                            <div class="caption text-center">
-                                <h1>Example headline.</h1>
-                                <h2 class="display-small">Subtitle</h2>
-                            </div>
-                            <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid img-responsive">
-                            <div class="row justify-content-around display-large">
-                                <a>
-                                    <button>Button</button>
-                                </a>
-                            </div>
-                        </div>
+            <div class="row d-flex justify-content-around display-small">
+                <div class="col-lg-5 no-padding white">
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                    <p>Type de projet</p>
+                    <h6>Titre h6</h6>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <a href="#" class="link1">Voir le projet</a>
+                </div>
+                <div class="col-lg-5 no-padding white">
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                    <p>Type de projet</p>
+                    <h6>Titre h6</h6>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <a href="#" class="link1">Voir le projet</a>
+                </div>
+                <div class="col-lg-5 no-padding white">
+                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                    <p>Type de projet</p>
+                    <h6>Titre h6</h6>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <a href="#" class="link1">Voir le projet</a>
+                </div>
+                <div class="col-lg-5 no-padding white">
+                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                    <p>Type de projet</p>
+                    <h6>Titre h6</h6>
+                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <a href="#" class="link1">Voir le projet</a>
+                </div>
+            </div>
+        </div>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row block">
-            <div class="offset-lg-2 col-xs-12 col-lg-8" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-xs-12 col-lg-6 thumbnail">
-                        <div class="caption text-center">
-                            <h1>Example headline.</h1>
-                            <h2 class="display-small">Subtitle</h2>
-                        </div>
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid img-responsive">
-                        <div class="row justify-content-around display-large">
-                            <a>
-                                <button>Button</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-lg-6 thumbnail">
-                        <div class="decale">
-                            <div class="caption text-center">
-                                <h1>Example headline.</h1>
-                                <h2 class="display-small">Subtitle</h2>
-                            </div>
-                            <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid img-responsive">
-                            <div class="row justify-content-around display-large">
-                                <a>
-                                    <button>Button</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row decale_bloc">
-            <div class="offset-lg-2 col-xs-12 col-lg-8" style="border-style: solid;">
-                <div class="row col-xs-1 col-lg-12 justify-content-center">
-                    <h1>A title</h1>
-                </div>
-                <div class="row col-xs-1 col-lg-12 justify-content-center">
-                    <h2>Subtitle</h2>
-                </div>
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                    </div>
-                    <div class="col-md-6 col-lg-6" style="border-style: solid;">
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
-                        <div class="row justify-content-around">
-                            <a>
-                                <button>Button</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 {% endblock %}
