--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -179,6 +179,12 @@ a.link3 {
     margin-right: 15px;
 }
 
+img.h1 {
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+}
+
 /* Buttons */
 
 button {
@@ -201,7 +207,7 @@ button {
 }
 
 button:hover {
-    background-color: #68C1DD!important;
+    background-color: #68C1DD !important;
     color: #373737;
     border-radius: 8px;
     height: 50px;
