fix social icones position

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                     <h5><a href="{{ path('contact_page') }}">Nous contacter</a></h5>
                 </nav>
             </div>
-            <div class="col-auto align-self-center">
+            <div class="col-auto align-self-center ml-auto p-2 bd-highlight">
                 <img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social" alt="logo linkedin">
                 <img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social" alt="logo facebook">
             </div>
@@ -39,7 +39,7 @@
 <div class="container-fluid">
     <div class="row" id="pre-footer">
         <div class="col-12">
-            <p>LOREM</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
         </div>
         <div class="col-12">
             <button>Button</button>
