--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,11 +38,14 @@
 
 <div class="container-fluid">
     <div class="row" id="pre-footer">
-        <div class="col-12">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
+        <div class="col-12 align-self-center">
+            <h2 class="text-center margin-auto">Un projet ?</h2>
         </div>
-        <div class="col-12">
-            <button>Button</button>
+        <div class="offset-4 col-4 text-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
+        </div>
+        <div class="col-12 align-self-top text-center">
+            <button class="margin-auto">Button</button>
         </div>
     </div>
 </div>
