--- a/public/CSS/blog.css
+++ b/public/CSS/blog.css
@@ -1,47 +1,3 @@
-.row
-{
-    margin-top: 50px;
-}
-.decale
-{
-    position: absolute;
-    top: 20%;
-}
-.decale_bloc
-{
-    margin-top: 8%;
-}
-.thumbnail {
-    position: relative;
-}
-
-.caption {
-    position: absolute;
-    top: 40%;
-    left: 0;
-    background-color: #1b1e21;
-    width: 90%;
-    margin-left: 5%;
-    color: white;
-    opacity: 0.8;
-}
-.caption_button {
-    position: absolute;
-    top: 100%;
-    left: 75%;
-    padding-top: 20%;
-}
-.button_catalog_subtitle
- {
-    padding-right:0;
-    padding-left:0;
-    margin-top: 50px;
- }
-.button_catalog_bigtitle
-{
-    text-align: center;
-    padding-right:0;
-    padding-left:0;
-    margin-top: 50px;
-    margin-bottom: 50px;
+.block {
+    margin-bottom: 4em;
 }
