--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -3,99 +3,71 @@
     <link href="{{ asset('CSS/contact.css') }}" rel="stylesheet">
 {% endblock %}
 {% block body %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
+    <div class="container-fluid page-content">
+        <header>
+            <div class="row justify-content-around">
+                <div class="col-xs-12 col-lg-5 justify-content-around">
+                    <div class="row col-xs-6">
+                        <img src="{{ asset('images/logoH1/nous_contacter.svg') }}" class="h1">
                         <h1>Nous contacter</h1>
-                        <h2>Subtitle</h2>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis.</p>
                     </div>
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
+                    <div class="row col-xs-6">
+                        <h2>A Subtitle</h2>
+                    </div>
+                    <div class="row">
+                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
+                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
+                            dictum.</p>
                     </div>
                 </div>
+                <div class="col-lg-5 display-small">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid ">
+                </div>
             </div>
-        </div>
+        </header>
+
         <div class="row">
-            <div class="col-12" style="border-style: solid;">
+            <div class="col-12">
                 <div>
                     <h4>Vous souhaitez nous contacter?</h4>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            {% for message in app.flashes('notice') %}
-                <div class="flash-notice">
-                    {{ message }}
-                </div>
-            {% endfor %}
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10">
-                {{ form_start(form) }}
+                <div>
+                    {% for message in app.flashes('notice') %}
+                        <div class="flash-notice">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    {{ form_start(form) }}
 
-                <div class="form-row d-flex justify-content-around">
-                    <div class="form-group col-md-5 col-lg-5">
-                        {{ form_widget(form.firstname) }}
-                    </div>
-                    <div class="form-group col-md-5 col-lg-5">
-                        {{ form_widget(form.lastname) }}
-                    </div>
-                </div>
-                <div class="form-row d-flex justify-content-around">
-                    <div class="form-group col-md-5 col-lg-5">
-                        {{ form_widget(form.email) }}
-                    </div>
-                    <div class="form-group col-md-5 col-lg-5">
-                        {{ form_widget(form.phoneNumber) }}
-                    </div>
-                </div>
-                <div class="row d-flex justify-content-around">
-                    <div class="form-group col-md-11 col-lg-11">
-                        {{ form_widget(form.title) }}
-                    </div>
-                    <div class="form-group col-md-11 col-lg-11">
-                        {{ form_widget(form.content) }}
-                    </div>
-                </div>
-                <div class="row d-flex justify-content-around">
-                    <button type="submit" class="btn btn-secondary btn-lg">Envoyer</button>
-                </div>
-                {{ form_end(form) }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row">
-                    <div class="offset-md-1 offset-lg-1 col-xs-11 col-md-4 col-lg-4" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                    </div>
-                    <div class="offset-md-1 offset-lg-1 col-xs-11 col-md-5 col-lg-5" style="border-style: solid;">
-                        <h1>Big Title</h1>
-                        <h3>Subtitle</h3>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
-                            opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit
-                            vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
-                            patruelis, siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque
-                            eum suae maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu
-                            fessae poscebant.</p>
-
-                        <p>Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt,
-                            cultorum ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se
-                            abunde iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana
-                            porrigitur, non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec
-                            indumentorum vilitate gregariis militibus discrepantes opposita cuncta superasse
-                            virtute.</p>
-                        <div class="row">
-                            <div class="col-md-12 col-lg-12 button_catalog_subtitle d-flex justify-content-around"
-                                 style="border-style: solid;">
-                                <input type="button" value="Button" class="btn btn-secondary btn-lg">
-                            </div>
+                    <div class="form-row d-flex justify-content-around">
+                        <div class="form-group col-md-5 col-lg-5">
+                            {{ form_widget(form.firstname) }}
+                        </div>
+                        <div class="form-group col-md-5 col-lg-5">
+                            {{ form_widget(form.lastname) }}
                         </div>
                     </div>
+                    <div class="form-row d-flex justify-content-around">
+                        <div class="form-group col-md-5 col-lg-5">
+                            {{ form_widget(form.email) }}
+                        </div>
+                        <div class="form-group col-md-5 col-lg-5">
+                            {{ form_widget(form.phoneNumber) }}
+                        </div>
+                    </div>
+                    <div class="row d-flex justify-content-around">
+                        <div class="form-group col-md-5 col-lg-5">
+                            {{ form_widget(form.title) }}
+                        </div>
+                        <div class="form-group col-md-5 col-lg-5"></div>
+                        <div class="form-group col-md-11 col-lg-11">
+                            {{ form_widget(form.content) }}
+                        </div>
+                    </div>
+                    <div class="row d-flex justify-content-around">
+                        <button type="submit">Envoyer</button>
+                    </div>
+                    {{ form_end(form) }}
                 </div>
             </div>
         </div>
